chore: add production config for Railway and Vercel deployment
- railway.json: Dockerfile builder pointing to routineflow-api/Dockerfile
- vercel.json: Vite SPA config with index.html rewrite fallback
- pom.xml: add spring-boot-starter-actuator dependency
- application.yml: port now uses ${PORT:8080} for Railway injection;
  add management.endpoints config exposing only /actuator/health
- SecurityConfig: CORS updated to setAllowedOriginPatterns + FRONTEND_URL
  env var; /actuator/health permitted without authentication
- .gitignore: suppress untracked routineflow-web/@/ shadcn residual

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>